tests/ui/const-generics/adt_const_params/check-type-in-mir.stderr
error: lifetime may not live long enough
  --> $DIR/check-type-in-mir.rs:12:28
   |
LL | fn test<'a, const N: Invariant<'static>>() {
   |         -- lifetime `'a` defined here
LL |     let x: Invariant<'a> = N;
   |                            ^ assignment requires that `'a` must outlive `'static`
   |
   = note: requirement occurs because of the type `Invariant<'_>`, which makes the generic argument `'_` invariant
   = note: the struct `Invariant<'a>` is invariant over the parameter `'a`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance

error: aborting due to 1 previous error

